feat: Add categories EP
